Addewd translations and fixed css in memory game

--- a/FrontEnd/termi-project/public/locales/ar/translation.json
+++ b/FrontEnd/termi-project/public/locales/ar/translation.json
@@ -55,7 +55,9 @@
             "leaderboard": "ليدربورد",
             "music": "موسيقى",
             "settings": "الإعدادات",
-            "games-menu": "قائمة الألعاب"
+            "games-menu": "قائمة الألعاب",
+            "language": "اللغة",
+            "difficulty": "صعوبة"
         },
         "backword-definition":{
             "question-info": "سؤال {{currentQuestion}}",
