--- a/FrontEnd/termi-project/public/locales/he/translation.json
+++ b/FrontEnd/termi-project/public/locales/he/translation.json
@@ -55,7 +55,9 @@
             "leaderboard": "לוח התוצאות",
             "music": "מוזיקה",
             "settings": "הגדרות",
-            "games-menu": "תפריט משחקים"
+            "games-menu": "תפריט משחקים",
+            "language": "שפה",
+            "difficulty": "קושי"
         },
         "backword-definition":{
             "question-info": "שאלה {{currentQuestion}}",
@@ -276,12 +278,12 @@
         "suggest_button": "הצע",
         "reset_button": "איפוס"
     },
-        "user_suggestions":{
+    "user_suggestions":{
         "User_Suggestions": "הצעות משתמשים",
         "Get_My_Suggestions": "קבל את ההצעות שלי",
         "You_have_no_suggestions": "אין לך הצעות"
     },
-        "admin_feedback_page":{
+    "admin_feedback_page":{
         "title": "משוב על ידי משתמשים",
         "Overall_Rating": "דירוג כולל",
         "Short_Definition_Rating": "דירוג הגדרה קצר",
