Add some translations

--- a/FrontEnd/termi-project/public/locales/ar/translation.json
+++ b/FrontEnd/termi-project/public/locales/ar/translation.json
@@ -31,6 +31,18 @@
         "finish":"النهايه",
         "finish_message":"شكرًا لتسجيلك. يرجى التحقق من صندوق البريد الوارد الخاص بك لمزيد من التعليمات حول كيفية تحقق من عنوان بريدك الإلكتروني حتى تتمكن من تسجيل الدخول."
     },
+    "gender":{
+        "gener-option": "جنس",
+        "male": "ذكر",
+        "female": "أنثى",
+        "other": "آخر"
+    },
+    "status":{
+        "status-option": "حالة",
+        "Student": "طالب",
+        "works_in_the_field": "עيعمل في الميدان",
+        "other": "آخر"
+    },
     "forgot_password":{
         "forgot_password":"هل نسيت كلمة السر",
         "text":"أدخل بريدك الإلكتروني لإعادة تعيين كلمة المرور.",
