--- a/FrontEnd/termi-project/public/locales/he/translation.json
+++ b/FrontEnd/termi-project/public/locales/he/translation.json
@@ -31,6 +31,18 @@
         "finish":"סיום",
         "finish_message":"תודה על הרשמתך. אנא בדוק את תיבת הדואר הנכנס שלך להוראות נוספות על כיצד לאמת את כתובת האימייל שלך כדי שתוכל להתחבר"
     },
+    "gender":{
+        "gener-option": "מגדר",
+        "male": "זכר",
+        "female": "נקבה",
+        "other": "אחר"
+    },
+    "status":{
+        "status-option": "סטטוס",
+        "Student": "סטודנט",
+        "works_in_the_field": "עובד בתחום",
+        "other": "אחר"
+    },
     "forgot_password":{
        "forgot_password":"שכחת את הסיסמא",
         "text":"הזן את האימייל שלך כדי לאפס את הסיסמה",
